# redoing-my-first-python-project

./: hello.py  pyproject.toml
database/: README.md
database/tables/: tables.sql
frontend/: README.md
src/: app.py
